tests/snapshots/s8_api_health_view__view_all_successful_calls.snap
---
source: tests/s8_api_health_view.rs
assertion_line: 88
expression: view
---
ApiHealthView {
    bee_endpoint: "http://localhost:1633",
    call_stats: CallStats {
        sample_size: 100,
        p50_ms: Some(
            50,
        ),
        p99_ms: Some(
            99,
        ),
        error_rate_pct: 0.0,
    },
    chain: ChainStateView {
        block: Some(
            12345,
        ),
        chain_tip: Some(
            12347,
        ),
        delta: Some(
            2,
        ),
        total_amount: Some(
            "1000",
        ),
        current_price: Some(
            "42",
        ),
    },
    pending: [],
}
